Fix input-group button alignment and borders

--- a/src/renderer/styles/index.scss
+++ b/src/renderer/styles/index.scss
@@ -115,12 +115,19 @@ button:not(:disabled):hover {
 }
 
 .input-group {
+  width: 100%;
+  display: flex;
+
   & > button {
-    width: 50%;
+    min-width: initial;
+
+    &:not(:first-child):not(:last-child) {
+      border-left-width: 0;
+      border-radius: 0;
+    }
     &:first-child {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
-      border-right-width: 0;
     }
     &:last-child {
       border-left-width: 0;
